<resources>
    <string name="app_name">MovieHitApplication</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sort_order_label">Sort Order</string>
    <string name="pref_sort_by_original_title">By Original Title</string>
    <string name="pref_sort_order_key" translatable="false">sortOrder</string>
    <string name="pref_most_popular">Most Popular</string>
    <string name="pref_highest_rated">Highest Rated</string>
    <string name="trailer">Trailer</string>
    <string name="you_clicked">You clicked</string>
    <string name="content">Content</string>
    <string name="movie" translatable="false">movie</string>
    <string name="loading">Loading...</string>
    <string name="movies_refreshed">Movies Refreshed</string>
    <string name="title">Title :</string>
    <string name="description">Description :</string>
    <string name="release_date">Release Date :</string>
    <string name="rated_to">Rated to :</string>
</resources>
